# rocketchat-slint

./: .codespellrc  Cargo.toml  README.md  cargo_update.sh  vscode.code-workspace
.github/workflows/: android.yml  cargo-update.yml  lints.yml  sanitizers.yml  tests.yml
rocketchat/: Cargo.toml
rocketchat-cli/: Cargo.toml
rocketchat-cli/src/: main.rs
rocketchat-slint/: Cargo.toml  build.rs
rocketchat-slint/src/: channel_list_controller.rs  lib.rs  login_controller.rs  main.rs  signal.rs
rocketchat-slint/ui/: appwindow.slint  channel_list.slint  login.slint
rocketchat/src/: lib.rs
