[package]
name = "rocketchat-slint"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
slint = { version = "1.5", features = ["backend-android-activity-05"] }
tokio = { version = "1", features = ["full"] }
rocketchat = { path = "../rocketchat" }
openssl = { version = "*", features = ["vendored"] }

[build-dependencies]
slint-build = "1.5"
