[package]
name = "rocketchat-slint"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
slint = { version = "1.6", features = ["backend-android-activity-06"] }
tokio = { version = "1", features = ["full"] }
rocketchat = { path = "../rocketchat" }
openssl = { version = "*", features = ["vendored"] }
log = "0.4.21"

[build-dependencies]
slint-build = "1.6"
