[package]
name = "rocketchat"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.31"
dirs-next = "2.0.0"
log = "0.4.21"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
